Add updated flower animation and layout

--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
   <div class="heart-container"></div>
   <div class="flower-field"></div>
 
+  
+  <div class="letter">
+    <h3>Dear Mama,</h3>
+    <p>
+      Every moment with you is a moment I treasure. <br>
+      Your smile is my sunrise, your laugh is my favorite melody. <br>
+      I made this little page for you, so every scroll blooms a memory, <br>
+      every floating heart carries my love.
+    </p>
+    <p>
+      Thank you for being you — endlessly beautiful, inside and out.<br>
+      I love you more than words can ever truly say.
+    </p>
+    <p>Forever yours, Liam<br>❤️</p>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
